--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 text-center">
-                    <img src="https://via.placeholder.com/300x300" alt="Rohit Kumar" class="img-fluid rounded-circle hero-img">
+                    <img src="https://avatars.githubusercontent.com/u/216918153?v=4" alt="Rohit Kumar" width="130" height="130" class="img-fluid rounded-circle hero-img">
                 </div>
             </div>
         </div>
